--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.2.1",
     "@sanity/image-url": "^1.1.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.4",
