--- a/sanity/package.json
+++ b/sanity/package.json
@@ -15,7 +15,7 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.80.1",
+    "@sanity/vision": "3.80.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.80.1",
