--- a/sanity/package.json
+++ b/sanity/package.json
@@ -23,10 +23,13 @@
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^5.0.2",
-    "@types/react": "^18.0.25",
-    "eslint": "^9.9.0",
+    "@types/node": "^22.13.13",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4",
     "prettier": "^3.0.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.8.2"
   },
   "prettier": {
     "semi": false,
