--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^3.2.1",
     "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "3.81.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.4",
     "next-sanity": "^9.9.6",
