--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,19 @@
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+# Przekierowanie API do funkcji Netlify
+[[redirects]]
+  from = "/api/contact"
+  to = "/.netlify/functions/contact"
+  status = 200
+  force = true
+
+# Zmienne środowiskowe
+[build.environment]
+  NETLIFY = "true"
+
+# Ustawienia funkcji
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
