--- a/netlify.toml
+++ b/netlify.toml
@@ -20,3 +20,8 @@
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
+
+  # Zwiększamy timeout dla funkcji
+  [functions.contact]
+    included_files = ["node_modules/nodemailer/**"]
+    timeout = 30
