--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/code-input": "^5.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "3.81.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
     "next": "15.2.4",
