--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@sanity/code-input": "^5.1.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "3.81.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
     "next-sanity": "^9.9.6",
     "next-sitemap": "^4.2.3",
