--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
+    "google-ads-api": "^19.0.2",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.2.4",
