--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "google-ads-api": "^19.0.2",
     "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.503.0",
     "next": "15.2.4",
     "next-sanity": "^9.9.6",
     "next-sitemap": "^4.2.3",
