--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.2.1",
-    "@sanity/code-input": "^5.1.2",
+    "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "3.81.0",
+    "@sanity/vision": "^3.89.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.5.0",
@@ -22,16 +22,16 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.503.0",
     "next": "15.2.4",
-    "next-sanity": "^9.9.6",
+    "next-sanity": "^9.11.1",
     "next-sitemap": "^4.2.3",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "sanity": "^3.89.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@sanity/cli": "^3.80.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.17.27",
     "@types/react": "^19.0.12",
